# filament

./: .gitignore  CMakeLists.txt  NOTES.txt  TODO.txt
android/filament-android/src/main/java/com/google/android/filament/: View.java
apps/: prebuild.bat
apps/android/gamedriver/: CMakeLists.txt  build.gradle  common.gradle  gradle.properties  settings.gradle
apps/android/gamedriver/app/: build.gradle
apps/android/gamedriver/app/src/androidTest/java/com/yaha/gamedriver/: ExampleInstrumentedTest.java
apps/android/gamedriver/app/src/main/: AndroidManifest.xml
apps/android/gamedriver/app/src/main/java/com/yaha/gamedriver/: FirstFragment.java  MainActivity.java
apps/android/gamedriver/app/src/main/res/navigation/: nav_graph.xml
apps/android/gamedriver/app/src/main/res/values/: strings.xml  themes.xml
apps/android/gamedriver/app/src/main/res/values-night/: themes.xml
apps/android/gamedriver/app/src/test/java/com/yaha/gamedriver/: ExampleUnitTest.java
apps/android/gamedriver/gradle/wrapper/: gradle-wrapper.properties
apps/android/gamedriver/src/main/cpp/: main.cpp
apps/android/gamedriver/src/main/java/org/libsdl/app/: SDLActivity.java
apps/android/launcher/: build.gradle  settings.gradle
apps/android/launcher/app/: CMakeLists.txt  build.gradle
apps/android/launcher/app/src/main/: AndroidManifest.xml
apps/android/launcher/app/src/main/java/com/yaha/gamedriver/: MainActivity.java  SecondFragment.java
apps/android/launcher/app/src/main/res/layout/: activity_main.xml
apps/android/launcher/app/src/main/res/menu/: menu_main.xml
apps/android/launcher/gradle/wrapper/: gradle-wrapper.properties
apps/launcher/: CMakeLists.txt
apps/launcher/src/: main.cpp
apps/nativeapps/android/: CMakeLists.txt  build.gradle
apps/nativeapps/android/src/main/cpp/: Filament.cpp  main.cpp
apps/windows/: CMakeLists.txt
apps/windows/launcher/: CMakeLists.txt
apps/windows/launcher/src/: main.cpp
filament/: CMakeLists.txt
filament/backend/: CMakeLists.txt
filament/backend/src/metal/: MetalDriver.mm
filament/backend/src/opengl/: OpenGLContext.cpp  OpenGLDriver.cpp  OpenGLDriver.h
filament/backend/src/vulkan/: VulkanDriver.cpp  VulkanUtility.h
filament/src/details/: Engine.cpp
libs/bluegl/: CMakeLists.txt
libs/bluevk/: CMakeLists.txt
libs/camutils/: CMakeLists.txt
libs/filabridge/include/private/filament/: EngineEnums.h
libs/filagui/: CMakeLists.txt
libs/filamat/: CMakeLists.txt
libs/filamat/src/eiff/: Chunk.h
libs/filamentapp/: CMakeLists.txt
libs/filamentapp/include/filamentapp/: Config.h  FilamentApp.h  NativeWindowHelper.h
libs/filamentapp/src/: FilamentApp.cpp  NativeWindowHelperAndroid.cpp
libs/filameshio/: CMakeLists.txt
libs/gamedriver/: CMakeLists.txt
libs/gamedriver/include/filagui/: ImGuiHelper.h
libs/gamedriver/include/gamedriver/: Automation.h  AutomationEngine.h  AutomationSpec.h  BaseLibs.h  Config.h  Configure.h  Cube.h  FilamentApp.h  GameDriver.h  Ground.h  IBL.h  IcoSphere.h  ImGuiBridge.h  LuauVM.h  MeshAssimp.h  Model.h  NativeWindowHelper.h  Overdraw.h  Resource.h  ScriptVM.h  Settings.h  Sphere.h  View.h  ViewGui.h  Window.h
libs/gamedriver/schemas/: Configure.fbs
libs/gamedriver/src/: AppEntry.cpp  Automation.cpp  AutomationEngine.cpp  AutomationSpec.cpp  BaseLibs.cpp  Configure.cpp  Cube.cpp  FilamentApp.cpp  GameDriver.cpp  Ground.cpp  IBL.cpp  IcoSphere.cpp  ImGuiBridge.cpp  ImGuiExtensions.cpp  ImGuiHelper.cpp  LuauVM.cpp  MeshAssimp.cpp  NativeWindowHelperAndroid.cpp  NativeWindowHelperCocoa.mm  NativeWindowHelperLinux.cpp  NativeWindowHelperWindows.cpp  Overdraw.cpp  Resource.cpp  ScriptVM.cpp  Settings.cpp  Settings_generated.cpp  Sphere.cpp  View.cpp  ViewGui.cpp  Window.cpp
libs/geometry/: CMakeLists.txt
libs/gltfio/: CMakeLists.txt
libs/gltfio/src/: JitShaderProvider.cpp
libs/iblprefilter/: CMakeLists.txt
libs/image/: CMakeLists.txt
libs/ktxreader/: CMakeLists.txt
libs/matdbg/src/: DebugServer.cpp
libs/math/: CMakeLists.txt
libs/resources/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: FileUtils.h
libs/utils/src/: FileUtils.cpp
libs/viewer/: CMakeLists.txt
libs/viewer/include/viewer/: Settings.h
libs/viewer/src/: ViewerGui.cpp
tools/beamsplitter/: main.go
tools/beamsplitter/emitters/: serializer.go  serializer.template
tools/beamsplitter/parse/: lex.go
tools/cmgen/: CMakeLists.txt
tools/glslminifier/: CMakeLists.txt
tools/matc/: CMakeLists.txt
web/filament-js/: extensions_generated.js  filament.d.ts
